--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head>   <!--start of head part-->
         <meta charset="UTF-8">
-        <title>ChatBot</title>
-    </head>
-    <body>
-
+        <title>ChatBot</title>   <!--title is ChatBot-->
+    </head>  <!--end of head part-->
+    <body>  <!--start of body part-->\
         <button>Talk</button>
-
-
         <script src="js/jquery.js"></script>
         <script src="js/socket.js"></script>
         <script src="js/script.js"></script>
-    </body>
-</html>
+    </body>   <!--end of body part-->
+</html>   <!-- end of html code-->
